feat: final implementation
